--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <link href="bootstrap/js/bootstrap-modal.js" rel="stylesheet" media="screen">
     <link href="bootstrap/js/bootstrap-transition.js" rel="stylesheet" media="screen">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 </head>
 
 <body class="dark">
