--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="./node_modules/bootstrap/js/dist/carousel.js"></script>
+    <script src="./node_modules/bootstrap/js/dist/modal.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
@@ -76,12 +80,12 @@
             <h3>About Me</h3>
             <div class="row">
                 <div class="col-12 col-md-6 col-sm-12">
-                    <p>My name is Hadeel Hamam <br> From Egypt, and lives in Qena <br> I have 21 years <br> I love
+                    <p>My name is Hadeel Hamam <br> From Egypt, and lives in Qena <br> I have 23 years <br> I love
                         drawing
                         and
                         photography.
-                        I draw from the age of 12 and work with it since the age of 16.
-                        I loved the front-end and I hope to be a skilled front-end developer. <br><br> Lorem ipsum dolor
+                        I draw from the age of 10.
+                        I loved front-end and I hope to be a skilled front-end developer. <br><br> Lorem ipsum dolor
                         sit amet consectetur adipisicing elit. Provident excepturi dolore exercitationem aut ratione
                         quae numquam, commodi recusandae nulla sint illum voluptas quibusdam error temporibus aperiam
                         sequi sapiente asperiores sunt!</p>
@@ -524,7 +528,7 @@
             </div>
             <h3>More Drawings</h3>
             <br>
-            <div id="carouselExample" class="carousel slide moreart">
+            <div id="carouselExampleControls" class="carousel slide moreart">
                 <div class="carousel-inner imgs">
                     <div class="carousel-item active ">
                         <div class="d-flex art">
@@ -559,16 +563,15 @@
                         </div>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
-                    data-bs-slide="prev">
+
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
-                    data-bs-slide="next">
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
         </div>
         <hr>
@@ -627,7 +630,7 @@
                                 eligendi maxime est, blanditiis accusamus. Incidunt, aut, quis!</p>
                             <ul class="list-unstyled quick-info mb-4">
                                 <li><a href="#" class="d-flex align-items-center"><i
-                                            class="fa fa-solid fa-phone"></i>&nbsp; +20 1102636003</a></li>
+                                            class="fa fa-solid fa-phone"></i>&nbsp; +20 123698745</a></li>
                                 <li><a href="#" class="d-flex align-items-center"><i
                                             class="fa fa-solid fa-envelope"></i>&nbsp; hadeel.hamam.sadek@gmail.com</a>
                                 </li>
