Edit in nav & slider

--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
                                 <a href="https://www.linkedin.com/in/hadeel-hamam-49427021b/" target="_blank"><i
                                         class="fa fa-linkedin w3-hover-opacity"></i></a>
                             </h5>
-                            <p>&copy; All rights reserved</p>
+                            <p>&copy; All copyrights rights reserved</p>
                         </div>
 
 
